# web-activity-logger

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
extension/: background.js  content.js  manifest.json
src/: main.py  merger.py  network.py  utils.py
tests/: test_extension.py  test_integration.py  test_main.py  test_merger.py  test_network.py  test_setup.py  test_utils.py
