[project]
name = "web-logger"
version = "0.1.0"
description = "Browser extension + Playwright tool for recording user interactions and network requests"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]
